# liveavatar-starter-livekit-agent-python

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  livekit.toml  pyproject.toml
docs/: byo-livekit-demo.md  liveavatar-hosted-demo.md
src/: agent.py  agent_dispatcher.py  avatar_ws.py  byo_livekit_demo.py  example_flow_v2.py  liveavatar.py  liveavatar_client.py  liveavatar_hosted_demo.py  main.py  pipeline.py  worker.py
tests/: test_smoke.py
viewer/: index.html
